// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpatialFilterToolbar tests renders spatial filter before drawing 1`] = `
<EuiFlexGroup
  alignItems="center"
  direction="column"
  gutterSize="none"
  responsive={false}
>
  <EuiFlexItem>
    <FilterByShape
      defaultLabel="rectangle"
      iconType="vector"
      isDarkMode={false}
      mode="rectangle"
      setDrawFilterProperties={[MockFunction]}
      shapeLabel="Draw Rectangle"
      shapeMode="rectangle"
    />
  </EuiFlexItem>
  <EuiFlexItem>
    <FilterByShape
      defaultLabel="polygon"
      iconType={Object {}}
      isDarkMode={false}
      mode="rectangle"
      setDrawFilterProperties={[MockFunction]}
      shapeLabel="Draw Polygon"
      shapeMode="polygon"
    />
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`SpatialFilterToolbar tests renders spatial filter while drawing 1`] = `
<EuiFlexGroup
  alignItems="center"
  direction="column"
  gutterSize="none"
  responsive={false}
>
  <EuiFlexItem>
    <FilterByShape
      defaultLabel="rectangle"
      iconType="vector"
      isDarkMode={false}
      mode="polygon"
      setDrawFilterProperties={[MockFunction]}
      shapeLabel="Draw Rectangle"
      shapeMode="rectangle"
    />
  </EuiFlexItem>
  <EuiFlexItem>
    <FilterByShape
      defaultLabel="polygon"
      iconType={Object {}}
      isDarkMode={false}
      mode="polygon"
      setDrawFilterProperties={[MockFunction]}
      shapeLabel="Draw Polygon"
      shapeMode="polygon"
    />
  </EuiFlexItem>
</EuiFlexGroup>
`;
